--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "server": "node dist/main.js",
-    "start": "npm run build && npm run server"
+    "start": "npm run build && npm run server",
+    "nodemon": "nodemon src/main.ts"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "@types/sqlite3": "^3.1.8",
-    "@types/typescript": "^2.0.0"
+    "@types/typescript": "^2.0.0",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1"
   }
 }
